# mhnav_pipeline

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/mhnav_pipeline/: __init__.py  agglines.py  bratdb_utils.py  build_datasets.py  main.py  read_data.py
src/mhnav_pipeline/local/: cleaning_template.py  tracking.py
test/: test_cleaning.py
